@@ -20,9 +20,9 @@ twice (i.e. '\fB\e\e\e\e\fR').
 There are three types of lines in \fBaide.conf\fP. First there are the
 configuration options which are used to set configuration parameters and
 define groups. Second, there are (restricted) rules that are used to indicate
-which files are added to the database. Third, macro lines define or undefine
-variables within the config file. Lines beginning with # are ignored as
-comments.
+which files/directoires from the file system are added to the database. Third,
+macro lines define or undefine variables within the config file. Lines
+beginning with # are ignored as comments.
 .PP
 
 .SH "CONFIG OPTIONS"
